# PythonWEB

./: .gitignore  README.md
HW10_WEB/: pyproject.toml
HW10_WEB/hw_project/hw_project/: settings.py
HW10_WEB/hw_project/quotes/: urls.py  views.py
HW10_WEB/hw_project/quotes/migrations/: 0001_initial.py
HW10_WEB/hw_project/quotes/static/quotes/: style.css
HW10_WEB/hw_project/quotes/templates/quotes/: base.html  index.html
HW10_WEB/hw_project/users/: urls.py  views.py
HW10_WEB/hw_project/users/templates/users/: signin.html
HW10_WEB/hw_project/utils/: add_quotes_to_mongodb.py  migration.py
HW11_WEB/: main.py
HW11_WEB/src/: schemas.py
HW12_WEB/: main.py
HW12_WEB/src/: schemas.py
HW13_WEB/fastapi/: main.py
HW14_WEB/RestAPI/: docker-compose.yml  main.py  pyproject.toml
HW14_WEB/RestAPI/docs/: conf.py  make.bat
HW14_WEB/RestAPI/docs/_build/doctrees/: environment.pickle  index.doctree
HW14_WEB/RestAPI/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
HW14_WEB/RestAPI/docs/_build/html/_sources/: index.rst.txt
HW14_WEB/RestAPI/migrations/versions/: 078eeab268bd_init.py  d23f9cb1d48b_init.py
HW14_WEB/RestAPI/src/: schemas.py
HW14_WEB/RestAPI/src/database/: db.py
HW14_WEB/RestAPI/src/repository/: contacts.py  users.py
HW14_WEB/RestAPI/src/routes/: auth.py  contacts.py  users.py
HW14_WEB/RestAPI/src/services/: auth.py  email.py
HW14_WEB/RestAPI/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
HW1_WEB/: AddressBook  AdressBook.csv  addressbook.py
HW2_WEB/: Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
HW2_WEB/abvad/: address_book.py  calculator.py  files_sort.py  main.py  note_book.py
HW3_WEB/: factorize.py
HW4_WEB/: Dockerfile  main.py  pyproject.toml
HW4_WEB/storage/: data.json
HW5_WEB/: main.py  pyproject.toml  server.py
HW6_WEB/: create_db.py  create_tables.sql  fill_data.py  main.py  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  university.db
HW7_WEB/: alembic.ini  my_select.py  pyproject.toml  seed.py
HW7_WEB/alembic/versions/: 71fb148b617e_init.py  e9c125e6827e_init.py
HW7_WEB/database/: connect_db.py  models.py
HW8_WEB/part_1/: main.py  models.py  seeds.py
HW8_WEB/part_2/: consumer_email.py  consumer_sms.py  models.py  producer.py
HW9_WEB/: btf_soup.py
(+33 files in other folders)
